--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160212</version>
+		</dependency>
+		
 
 	</dependencies>
 
